--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -15,6 +15,116 @@
 
 </head>
 <body>
+	<!-- PRELOADER -->
+<!-- //PRELOADER -->
+<div class="preloader_hide">
+
+	<!-- PAGE -->
+	<div id="page" class="single_page">
+	
+		<!-- HEADER -->
+		<header>
+			
+			<!-- MENU BLOCK -->
+			<div class="menu_block">
+			
+				<!-- CONTAINER -->
+				<div class="container clearfix">
+					
+					<!-- LOGO -->
+					<div class="logo pull-left">
+						
+					</div><!-- //LOGO -->
+					
+					<!-- SEARCH FORM -->
+					<div id="search-form" class="pull-right">
+						<form method="get" action="#">
+							<input type="text" name="Search" value="Search" onFocus="if (this.value == 'Search') this.value = '';" onBlur="if (this.value == '') this.value = 'Search';" />
+						</form>
+					</div><!-- SEARCH FORM -->
+					
+					<!-- MENU -->
+					<div class="pull-right">
+						<nav class="navmenu center">
+							<ul>
+								<li class="first scroll_btn"><a href="index.html">Главная</a></li>
+								<li class="scroll_btn"><a href="index.html#about">О нас</a></li>
+								<li class="scroll_btn"><a href="index.html#projects">Проекты</a></li>
+								<li class="scroll_btn"><a href="index.html#team">Команда</a></li>
+								<li class="scroll_btn"><a href="index.html#news">Новости</a></li>
+								<li class="scroll_btn last"><a href="index.html#contacts">Контакты</a></li>
+								<li class="sub-menu active">
+									<a href="javascript:void(0);">Услуги</a>
+									<ul>
+										<li><a href="blog.html">1</a></li>
+										<li><a href="blog-post.html">2</a></li>
+										<li class="active"><a href="portfolio-post.html">3</a></li>
+									</ul>
+								</li>
+							</ul>
+						</nav>
+					</div><!-- //MENU -->
+				</div><!-- //MENU BLOCK -->
+			</div><!-- //CONTAINER -->
+		</header><!-- //HEADER -->
+		
+		
+		<!-- BREADCRUMBS -->
+		<section class="breadcrumbs_block clearfix parallax">
+			<div class="container center">
+				<h2><b></b> Портфолио</h2>
+				<p>информация</p>
+			</div>
+		</section><!-- //BREADCRUMBS -->
+		
+		
+		<!-- PORTFOLIO -->
+		<section id="portfolio">
+			
+			<!-- CONTAINER -->
+			<div class="container">
+				
+				<!-- ROW -->
+				<div class="row">
+					
+					<!-- SIDEBAR -->
+					<div class="sidebar col-lg-4 col-md-4 pull-right padbot50">
+						<!-- TEXT WIDGET -->
+						<div class="sidepanel widget_text">
+							<div class="single_portfolio_post_title">керукеруеуерукер</div>
+							<p> Индустрия модельного бизнеса в России гораздо моложе западной, поэтому новые студии и школы моделей появляются одна за другой. Выделиться на фоне конкурентов, привлечь на кастинги самые выразительные и эффектные лица, добиться внимания обширной клиентуры, крупной прибыли и популярности без сумасшедших затрат можно с помощью грамотно созданного интернет-ресурса. Важнейшую роль в его наполнении играет качественный копирайтинг для модельных агентств.</p>
+						</div><!-- //TEXT WIDGET -->
+						
+						<hr>
+						
+						<!-- INFO WIDGET -->
+						<div class="sidepanel widget_info">
+							<ul class="work_info">
+								<li>Локация: <a href="javascript:void(0);" >a</a> <a href="javascript:void(0);" ></a></li>
+								<li>Модель: <a href="javascript:void(0);" >b</a></li>
+								<li>Фотограф: <a href="javascript:void(0);" >c</a></li>
+							</ul>
+							
+							<ul class="shared">
+								<li><a href="javascript:void(0);" ><i class="fa fa-twitter"></i></a></li>
+								<li><a href="javascript:void(0);" ><i class="fa fa-facebook"></i></a></li>
+								<li><a href="javascript:void(0);" ><i class="fa fa-google-plus"></i></a></li>
+								<li><a href="javascript:void(0);" ><i class="fa fa-pinterest-square"></i></a></li>
+							</ul>
+						</div><!-- //INFO WIDGET -->
+					</div><!-- //SIDEBAR -->
+					
+					
+					<!-- PORTFOLIO BLOCK -->
+					<div class="portfolio_block col-lg-8 col-md-8 pull-left padbot50">
+						
+						<!-- SINGLE PORTFOLIO POST -->
+						<div class="single_portfolio_post clearfix" data-animated="fadeInUp">
+							
+
+					</div><!-- //PORTFOLIO BLOCK -->
+				</div><!-- //ROW -->
+			</div><!-- //CONTAINER -->
 
 </body>
 </html>
