--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -1,45 +1,114 @@
 <!doctype html>
-{% load static %}
-<html lang="ru">
-<head>
-	<meta charset="utf-8">
-	
-	<title>Ниточка</title>
-	
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+  
 
-	<link rel="stylesheet" href="{% static 'css/documenter_style.css' %}" media="all">
-	<link rel="stylesheet" href="{% static 'css/prettify.css' %}" type="text/css" media="screen, projection">
-	
-	
-	<style>
-		html{background-color:#FFFFFF;color:#383838;}
-		::-moz-selection{background:#444444;color:#DDDDDD;}
-		::selection{background:#444444;color:#DDDDDD;}
-		a{color:#0000FF;}
-		hr{border-top:1px solid #EBEBEB;border-bottom:1px solid #FFFFFF;}
-		#documenter_sidebar, #documenter_sidebar ol a{background-color:#DDDDDD;color:#222222;}
-		#documenter_sidebar ol a{-webkit-text-shadow:1px 1px 0px #EEEEEE;-moz-text-shadow:1px 1px 0px #EEEEEE;text-shadow:1px 1px 0px #EEEEEE;}
-		#documenter_sidebar ol{border-top:1px solid #AAAAAA;}
-		#documenter_sidebar ol a{border-top:1px solid #EEEEEE;border-bottom:1px solid #AAAAAA;color:#444444;}
-		#documenter_sidebar ol a:hover{background:#444444;color:#DDDDDD;border-top:1px solid #444444;}
-		#documenter_sidebar ol a.current{background:#444444;color:#DDDDDD;border-top:1px solid #444444;}
-		#documenter_copyright{display:block !important;visibility:visible !important;}
-	</style>
-	
-</head>
-<body>
-	<div id="documenter_sidebar">
-		<ol id="documenter_nav">
-			<li><a class="current" href="index.html">Главная</a></li>
-            <li><a href="Gallery.html">Галерея работ</a></li>
-			<li><a href="Price.html">Прейскурант цен</a></li>
-            <li><a href="Contacts.html">Контакты</a></li>
-		</ol>
-	</div>
-	<div id="documenter_content">
-		<section id="documenter_cover">
-			<h1>Сайт Ателье "Ниточка"</h1>
-		</section>
+    <title>Главная страница</title>
 
-</body>
+    <!-- Bootstrap core CSS -->
+    <link href="../../../../dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="pricing.css" rel="stylesheet">
+  </head>
+
+  <body>
+
+    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
+      <h5 class="my-0 mr-md-auto font-weight-normal">Ателье "Ниточка"</h5>
+      <nav class="my-2 my-md-0 mr-md-3">
+        <a class="p-2 text-dark" href="index.html">Главная</a>
+        <a class="p-2 text-dark" href="gallery.html">Порфолио</a>
+        <a class="p-2 text-dark" href="price.html">Прейскурант</a>
+        <a class="p-2 text-dark" href="contacts.html">Контакты</a>
+      </nav>
+    
+    </div>
+
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+      <h1 class="display-4">Все услуги в одном месте</h1>
+      <p class="lead">Добрый день, наши дорогие клиенты и просто друзья! Вот уже больше 10 лет наша команда профессионалов формирует концепцию ателье полного цикла услуг.  Это означает, что у нас вы можете получить любую услугу в области пошива и ремонта одежды за адекватную цену. </p>
+    </div>
+
+    <div class="container">
+      <div class="card-deck mb-3 text-center">
+        <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Пошив</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">от 500 руб. <small class="text-muted"></small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>Юбки</li>
+              <li>Брюки</li>
+              <li>Жилеты</li>
+			  <li>И многое другое...</li>
+            </ul>
+			<button type="button" class="btn btn-lg btn-block btn-primary" href="contacts.html">Записаться</button>
+          </div>
+        </div>
+        <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Ремонт</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">От 160 руб.<small class="text-muted"></small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>Шторы</li>
+              <li>Пиджаки</li>
+              <li>Пальто</li>
+              <li>И так далее...</li>
+            </ul>
+            <button type="button" class="btn btn-lg btn-block btn-primary" href="contacts.html">Записаться</button>
+          </div>
+        </div>
+        <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Химчистка</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">от 250 руб. <small class="text-muted"></small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>Одежда</li>
+              <li>Обувь</li>
+              <li>Аксессуары</li>
+              <li>Домашний интерьер</li>
+            </ul>
+            <button type="button" class="btn btn-lg btn-block btn-primary" href="contacts.html">Записаться</button>
+          </div>
+        </div>
+      </div>
+
+      <footer class="pt-4 my-md-5 pt-md-5 border-top">
+        <div class="row">
+          <div class="col-12 col-md">
+            <img class="mb-2" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="24" height="24">
+            <small class="d-block mb-3 text-muted">&copy; Sewing Studio 2020</small>
+          </div>
+
+        </div>
+      </footer>
+    </div>
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="../../../../assets/js/vendor/popper.min.js"></script>
+    <script src="../../../../dist/js/bootstrap.min.js"></script>
+    <script src="../../../../assets/js/vendor/holder.min.js"></script>
+    <script>
+      Holder.addTheme('thumb', {
+        bg: '#55595c',
+        fg: '#eceeef',
+        text: 'Thumbnail'
+      });
+    </script>
+  </body>
 </html>
