--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -244,7 +244,10 @@
 	<!-- CONTACTS -->
 	<section id="contacts">
 	</section><!-- //CONTACTS -->
-	
+	<script type="text/javascript" charset="utf-8"
+            async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor
+            %3A367460e9d2ffe51c3cb7a7961e509f579111a1d97a09aef66923d96bb6023378&amp;
+            width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
 	<!-- FOOTER -->
 	<footer>
 			
