--- a/templates/landing/portfolio.html
+++ b/templates/landing/portfolio.html
@@ -1,21 +1,19 @@
-<!doctype html>
-<html lang="en">
-  <head>
+  <!DOCTYPE html>
+<html lang="ru">
+<head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
-    <meta name="author" content="">
-  <link href="bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet">
-
-    <title>Главная страница</title>
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Подключение Bootstrap 3 к HTML странице</title>
+    <!-- Bootstrap -->
+    <link href="bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <link href="../../../../dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="pricing.css" rel="stylesheet">
-<style>
+
+    <style>
         .item-responsive {
             position: relative; /* относительное позиционирование */
         }
@@ -27,24 +25,22 @@
         }
 
         .item-16by9 {
-            padding-top: 56.25%; /* (9:16)*100% */
+            padding-top: 90.25%; /* (9:16)*100% */
         }
 
         .item-responsive > .content {
             position: absolute; /* абсолютное положение элемент */
             /* положение элемента */
-            top: 50;
-            left: 50;
-            right: 50;
-            bottom: 50;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
             background-size: cover !important;
         }
     </style>
-  </head>
-
-  <body>
-
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
+</head>
+<body>
+ <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
       <h5 class="my-0 mr-md-auto font-weight-normal">Ателье "Ниточка"</h5>
       <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="index.html">Главная</a>
@@ -55,7 +51,6 @@
 
     </div>
 
-    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
 <div id="carousel" class="carousel slide" data-ride="carousel" style="max-width: 600px; margin: 0 auto;">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -73,36 +68,36 @@
                 <div class="content" style="background: url(1.jpg);"></div>
             </div>
             <div class="carousel-caption">
-
+            
             </div>
         </div>
         <div class="item">
             <div class="item-responsive item-16by9">
-                <div class="content" style="background: url(1.jpg);"></div>
+                <div class="content" style="background: url(2.jpg);"></div>
             </div>
             <div class="carousel-caption">
-
+           
             </div>
         </div>
         <div class="item">
             <div class="item-responsive item-16by9">
-                <div class="content" style="background: url(1.jpg);"></div>
+                <div class="content" style="background: url(3.jpg);"></div>
             </div>
             <div class="carousel-caption">
-
+    
             </div>
         </div>
         <div class="item">
             <div class="item-responsive item-16by9">
-                <div class="content" style="background: url(1.jpg);"></div>
+                <div class="content" style="background: url(4.jpg);"></div>
             </div>
             <div class="carousel-caption">
-
+ 
             </div>
         </div>
         <div class="item">
             <div class="item-responsive item-16by9">
-                <div class="content" style="background: url(1.jpg);"></div>
+                <div class="content" style="background: url(5.jpg);"></div>
             </div>
             <div class="carousel-caption">
             </div>
@@ -125,7 +120,7 @@
 <!-- Bootstrap -->
 <script src="bootstrap-3.3.7/js/bootstrap.min.js"></script>
 
-      <footer class="pt-4 my-md-5 pt-md-5 border-top">
+  <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="row">
           <div class="col-12 col-md">
             <img class="mb-2" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="24" height="24">
@@ -152,5 +147,6 @@
         text: 'Thumbnail'
       });
     </script>
-  </body>
-</html>
+
+</body>
+</html>					
