--- a/templates/landing/portfolio.html
+++ b/templates/landing/portfolio.html
@@ -65,7 +65,7 @@
     <div class="carousel-inner" role="listbox">
         <div class="item active">
             <div class="item-responsive item-16by9">
-                <div class="content" style="background: url(1.jpg);"></div>
+                <div class="content" style="background: url(images/1.jpg);"></div>
             </div>
             <div class="carousel-caption">
             
@@ -73,7 +73,7 @@
         </div>
         <div class="item">
             <div class="item-responsive item-16by9">
-                <div class="content" style="background: url(2.jpg);"></div>
+                <div class="content" style="background: url(images/2.jpg;"></div>
             </div>
             <div class="carousel-caption">
            
@@ -81,7 +81,7 @@
         </div>
         <div class="item">
             <div class="item-responsive item-16by9">
-                <div class="content" style="background: url(3.jpg);"></div>
+                <div class="content" style="background: url(images/3.jpg);"></div>
             </div>
             <div class="carousel-caption">
     
@@ -89,7 +89,7 @@
         </div>
         <div class="item">
             <div class="item-responsive item-16by9">
-                <div class="content" style="background: url(4.jpg);"></div>
+                <div class="content" style="background: url(images/4.jpg);"></div>
             </div>
             <div class="carousel-caption">
  
@@ -97,7 +97,7 @@
         </div>
         <div class="item">
             <div class="item-responsive item-16by9">
-                <div class="content" style="background: url(5.jpg);"></div>
+                <div class="content" style="background: url(images/5.jpg);"></div>
             </div>
             <div class="carousel-caption">
             </div>
