--- a/templates/landing/portfolio.html
+++ b/templates/landing/portfolio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Подключение Bootstrap 3 к HTML странице</title>
     <!-- Bootstrap -->
-    <link href="bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <link href="../../../../dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -118,7 +118,7 @@
 <!-- jQuery -->
 <script src="jquery-3.2.1.min.js"></script>
 <!-- Bootstrap -->
-<script src="bootstrap-3.3.7/js/bootstrap.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
   <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="row">
