--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -10,10 +12,10 @@
     <title>Главная страница</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../../../../dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'bootstrap-3.3.7/css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="pricing.css" rel="stylesheet">
+    <link href="{% static 'css/pricing.css' %}" rel="stylesheet">
   </head>
 
   <body>
@@ -21,10 +23,10 @@
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
       <h5 class="my-0 mr-md-auto font-weight-normal">Ателье "Ниточка"</h5>
       <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="index.html">Главная</a>
-        <a class="p-2 text-dark" href="gallery.html">Порфолио</a>
-        <a class="p-2 text-dark" href="price.html">Прейскурант</a>
-        <a class="p-2 text-dark" href="contacts.html">Контакты</a>
+          <a class="p-2 text-dark" href="">Главная</a>
+        <a class="p-2 text-dark" href="portfolio">Порфолио</a>
+        <a class="p-2 text-dark" href="price">Прейскурант</a>
+        <a class="p-2 text-dark" href="contacts">Контакты</a>
       </nav>
     
     </div>
