--- a/templates/service/prices.html
+++ b/templates/service/prices.html
@@ -7,11 +7,13 @@
     <meta name="author" content="">
   
 
-    <title>Контакты</title>
+    <title>Главная страница</title>
+
+    <!-- Bootstrap core CSS -->
     <link href="../../../../dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- Custom styles for this template -->
     <link href="pricing.css" rel="stylesheet">
-	
   </head>
 
   <body>
@@ -19,7 +21,7 @@
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
       <h5 class="my-0 mr-md-auto font-weight-normal">Ателье "Ниточка"</h5>
       <nav class="my-2 my-md-0 mr-md-3">
-          <a class="p-2 text-dark" href="index">Главная</a>
+        <a class="p-2 text-dark" href="index">Главная</a>
         <a class="p-2 text-dark" href="portfolio">Порфолио</a>
         <a class="p-2 text-dark" href="price">Прейскурант</a>
         <a class="p-2 text-dark" href="contacts">Контакты</a>
@@ -27,39 +29,25 @@
     
     </div>
 
+    <table border="1" bordercolor="#48D1CC">
+        <tr>
+            <th>Название услуги</th>
+            <th>Цена</th>
+        </tr>
 
-<section class="my-5">
-<link href="contacts.css" rel="stylesheet">
+    {% if service_list %}
+        {#цикл#}
+        {% for s in service_list %}
+            <tr>
+            <td>{{ s.service_name}}</td>{#название услуги#}
+            <td>{{ s.service_price }}</td> {#цена#}
+            </tr>
+        {% endfor %}
 
-  <h2 class="h1-responsive font-weight-bold text-center my-5">Наши контакты:</h2>
-
-  <div class="row">
-	<ul>
-	<td> <span style="font-family:Ubuntu, cursive; Font-size:20px;margin-left:15%">Как до нас добраться? </span></td>
-			     	 <li><font size="4" face="Comic Sans MS ">Адрес: ул. Юбилейная, 81А, Тольятти, Самарская обл., 445057</font></li>
-					 <td> <span style="font-family:Ubuntu, cursive; Font-size:20px;margin-left:15%">Общественный транспорт: </span></td>
-					 <li><font size="4" face="Comic Sans MS ">127,124 ,96, 91, 310 маршрутные автобусы.</font></li>
-					<td> <span style="font-family:Ubuntu, cursive; Font-size:20px;margin-left:15%">Контактные данные: </span></td>
-					 <li><font size="4" face="Comic Sans MS ">Телефон: +7(8482)35-27-44</font></li>
-					 <li><font size="4" face="Comic Sans MS ">Почтовый адрес: knopo4ka@gmail.com</font></li>
-			 
-			  </ul>
-
-    <div class="col-lg-7">
-
-      <!--Google map-->
-      <div id="map-container-section" class="z-depth-1-half map-container-section mb-4" style="height: 400px">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2373.163313927965!2d49.28073531581286!3d53.501277980011835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x41687bd163d4045b%3A0xe5e363372effefff!2z0YPQuy4g0K7QsdC40LvQtdC50L3QsNGPLCA4MdCQLCDQotC-0LvRjNGP0YLRgtC4LCDQodCw0LzQsNGA0YHQutCw0Y8g0L7QsdC7LiwgNDQ1MDU3!5e0!3m2!1sru!2sru!4v1590594930506!5m2!1sru!2sru" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-      </div>  
-
-    </div>
-
-
-  </div>
-
-
-</section>
-
+    {% else %}
+        Услуги не найдены
+    {% endif %}
+    </table>
 
       <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="row">
@@ -72,6 +60,10 @@
       </footer>
     </div>
 
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="../../../../assets/js/vendor/popper.min.js"></script>
