--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -12,7 +12,7 @@
     <title>Главная страница</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="{% static 'bootstrap-3.3.7/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'bootstrap-4.0.0/dist/css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="{% static 'css/pricing.css' %}" rel="stylesheet">
@@ -101,10 +101,10 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../../../assets/js/vendor/popper.min.js"></script>
-    <script src="../../../../dist/js/bootstrap.min.js"></script>
-    <script src="../../../../assets/js/vendor/holder.min.js"></script>
+    <script>window.jQuery || document.write('<script src="{% static 'bootstrap-4.0.0/assets/js/vendor/jquery-slim.min.js' %}"><\/script>')</script>
+    <script src="{% static 'bootstrap-4.0.0/assets/js/vendor/popper.min.js' %}"></script>
+    <script src="{% static 'bootstrap-4.0.0/dist/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'bootstrap-4.0.0/assets/js/vendor/holder.min.js' %}"></script>
     <script>
       Holder.addTheme('thumb', {
         bg: '#55595c',
