--- a/templates/landing/contacts.html
+++ b/templates/landing/contacts.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -8,9 +9,9 @@
   
 
     <title>Контакты</title>
-    <link href="../../../../dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'bootstrap-4.0.0/dist/css/bootstrap.min.css' %}" rel="stylesheet">
 
-    <link href="pricing.css" rel="stylesheet">
+    <link href="{% static 'css/pricing.css' %}" rel="stylesheet">
 	
   </head>
 
@@ -29,7 +30,7 @@
 
 
 <section class="my-5">
-<link href="contacts.css" rel="stylesheet">
+<link href="{% static 'css/contacts.css' %}" rel="stylesheet">
 
   <h2 class="h1-responsive font-weight-bold text-center my-5">Наши контакты:</h2>
 
@@ -74,9 +75,9 @@
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../../../assets/js/vendor/popper.min.js"></script>
-    <script src="../../../../dist/js/bootstrap.min.js"></script>
-    <script src="../../../../assets/js/vendor/holder.min.js"></script>
+    <script src="{% static 'bootstrap-4.0.0/assets/js/vendor/popper.min.js' %}"></script>
+    <script src="{% static 'bootstrap-4.0.0/dist/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'bootstrap-4.0.0/assets/js/vendor/holder.min.js' %}"></script>
     <script>
       Holder.addTheme('thumb', {
         bg: '#55595c',
