--- a/templates/landing/portfolio.html
+++ b/templates/landing/portfolio.html
@@ -1,3 +1,6 @@
+ {% load static %}
+
+
   <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -6,12 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Подключение Bootstrap 3 к HTML странице</title>
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="{% static 'bootstrap-3.3.7/css/bootstrap.min.css' %}" rel="stylesheet">
     <!-- Bootstrap core CSS -->
-    <link href="../../../../dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'bootstrap-4.0.0/dist/css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="pricing.css" rel="stylesheet">
+
+    <link href="{% static 'css/pricing.css' %}" rel="stylesheet">
 
     <style>
         .item-responsive {
@@ -65,7 +69,7 @@
     <div class="carousel-inner" role="listbox">
         <div class="item active">
             <div class="item-responsive item-16by9">
-                <div class="content" style="background: url(images/1.jpg);"></div>
+                <div class="content" style="background: url({% static 'resources/images/1.jpg' %});"></div>
             </div>
             <div class="carousel-caption">
             
@@ -73,7 +77,7 @@
         </div>
         <div class="item">
             <div class="item-responsive item-16by9">
-                <div class="content" style="background: url(images/2.jpg;"></div>
+                <div class="content" style="background: url({% static 'resources/images/2.jpg' %})"></div>
             </div>
             <div class="carousel-caption">
            
@@ -81,7 +85,7 @@
         </div>
         <div class="item">
             <div class="item-responsive item-16by9">
-                <div class="content" style="background: url(images/3.jpg);"></div>
+                <div class="content" style="background: url({% static 'resources/images/3.jpg' %});"></div>
             </div>
             <div class="carousel-caption">
     
@@ -89,7 +93,7 @@
         </div>
         <div class="item">
             <div class="item-responsive item-16by9">
-                <div class="content" style="background: url(images/4.jpg);"></div>
+                <div class="content" style="background: url({% static 'resources/images/4.jpg' %});"></div>
             </div>
             <div class="carousel-caption">
  
@@ -97,7 +101,7 @@
         </div>
         <div class="item">
             <div class="item-responsive item-16by9">
-                <div class="content" style="background: url(images/5.jpg);"></div>
+                <div class="content" style="background: url({% static 'resources/images/5.jpg' %});"></div>
             </div>
             <div class="carousel-caption">
             </div>
@@ -116,9 +120,9 @@
 </div>
 
 <!-- jQuery -->
-<script src="jquery-3.2.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 <!-- Bootstrap -->
-<script src="js/bootstrap.min.js"></script>
+<script src="{% static 'bootstrap-3.3.7/js/bootstrap.min.js' %}"></script>
 
   <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="row">
@@ -136,10 +140,10 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../../../assets/js/vendor/popper.min.js"></script>
-    <script src="../../../../dist/js/bootstrap.min.js"></script>
-    <script src="../../../../assets/js/vendor/holder.min.js"></script>
+    <script>window.jQuery || document.write('<script src="{% static 'bootstrap-4.0.0/assets/js/vendor/jquery-slim.min.js' %}"><\/script>')</script>
+    <script src="{% static 'bootstrap-4.0.0/assets/js/vendor/popper.min.js' %}"></script>
+    <script src="{% static 'bootstrap-4.0.0/dist/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'bootstrap-4.0.0/assets/js/vendor/holder.min.js' %}"></script>
     <script>
       Holder.addTheme('thumb', {
         bg: '#55595c',
