--- a/templates/landing/portfolio.html
+++ b/templates/landing/portfolio.html
@@ -48,7 +48,7 @@
       <h5 class="my-0 mr-md-auto font-weight-normal">Ателье "Ниточка"</h5>
       <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="{% url 'index'%}">Главная</a>
-        <a class="p-2 text-dark" href="{% url 'portfolio'%}">Порфолио</a>
+        <a class="p-2 text-dark" href="{% url 'portfolio'%}">Портфолио</a>
         <a class="p-2 text-dark" href="{% url 'services'%}">Прейскурант</a>
         <a class="p-2 text-dark" href="{% url 'contacts'%}">Контакты</a>
       </nav>
