Добваление изображений в portfolio

--- a/templates/landing/portfolio.html
+++ b/templates/landing/portfolio.html
@@ -63,6 +63,11 @@
         <li data-target="#carousel" data-slide-to="2"></li>
         <li data-target="#carousel" data-slide-to="3"></li>
         <li data-target="#carousel" data-slide-to="4"></li>
+          <li data-target="#carousel" data-slide-to="5"></li>
+        <li data-target="#carousel" data-slide-to="6"></li>
+        <li data-target="#carousel" data-slide-to="7"></li>
+        <li data-target="#carousel" data-slide-to="8"></li>
+          <li data-target="#carousel" data-slide-to="9"></li>
     </ol>
 
     <!-- Wrapper for slides -->
@@ -102,6 +107,41 @@
         <div class="item">
             <div class="item-responsive item-16by9">
                 <div class="content" style="background: url({% static 'resources/images/5.jpg' %});"></div>
+            </div>
+            <div class="carousel-caption">
+            </div>
+        </div>
+         <div class="item">
+            <div class="item-responsive item-16by9">
+                <div class="content" style="background: url({% static 'resources/images/6.jpg' %});"></div>
+            </div>
+            <div class="carousel-caption">
+            </div>
+        </div>
+         <div class="item">
+            <div class="item-responsive item-16by9">
+                <div class="content" style="background: url({% static 'resources/images/7.jpg' %});"></div>
+            </div>
+            <div class="carousel-caption">
+            </div>
+        </div>
+         <div class="item">
+            <div class="item-responsive item-16by9">
+                <div class="content" style="background: url({% static 'resources/images/8.jpg' %});"></div>
+            </div>
+            <div class="carousel-caption">
+            </div>
+        </div>
+         <div class="item">
+            <div class="item-responsive item-16by9">
+                <div class="content" style="background: url({% static 'resources/images/9.jpg' %});"></div>
+            </div>
+            <div class="carousel-caption">
+            </div>
+        </div>
+         <div class="item">
+            <div class="item-responsive item-16by9">
+                <div class="content" style="background: url({% static 'resources/images/10.jpg' %});"></div>
             </div>
             <div class="carousel-caption">
             </div>
