--- a/templates/landing/portfolio.html
+++ b/templates/landing/portfolio.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Подключение Bootstrap 3 к HTML странице</title>
+    <title>Портфолио</title>
     <!-- Bootstrap -->
         <link href="{% static 'bootstrap-3.3.7/css/bootstrap.min.css' %}" rel="stylesheet">
     <!-- Bootstrap core CSS -->
