--- a/templates/service/prices.html
+++ b/templates/service/prices.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
   
 
-    <title>Главная страница</title>
+    <title>Прейскурант</title>
 
     <link href="{% static 'bootstrap-4.0.0/dist/css/bootstrap.min.css' %}" rel="stylesheet">
 
