--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -50,7 +50,7 @@
               <li>Жилеты</li>
 			  <li>И многое другое...</li>
             </ul>
-			<button type="button" class="btn btn-lg btn-block btn-primary" href="{% url 'contacts'%}">Записаться</button>
+		<a href="{% url 'contacts'%}" class="btn btn-lg btn-block btn-primary">Записаться</a>
           </div>
         </div>
         <div class="card mb-4 box-shadow">
@@ -65,7 +65,7 @@
               <li>Пальто</li>
               <li>И так далее...</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-primary" href="{% url 'contacts'%}">Записаться</button>
+           <a href="{% url 'contacts'%}" class="btn btn-lg btn-block btn-primary">Записаться</a>
           </div>
         </div>
         <div class="card mb-4 box-shadow">
@@ -80,7 +80,7 @@
               <li>Аксессуары</li>
               <li>Домашний интерьер</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-primary" href="{% url 'contacts'%}">Записаться</button>
+                  <a href="{% url 'contacts'%}" class="btn btn-lg btn-block btn-primary">Записаться</a>
           </div>
         </div>
       </div>
