--- a/templates/landing/contacts.html
+++ b/templates/landing/contacts.html
@@ -41,8 +41,8 @@
 					 <td> <span style="font-family:Ubuntu, cursive; Font-size:20px;margin-left:15%">Общественный транспорт: </span></td>
 					 <li><font size="4" face="Comic Sans MS ">127,124 ,96, 91, 310 маршрутные автобусы.</font></li>
 					<td> <span style="font-family:Ubuntu, cursive; Font-size:20px;margin-left:15%">Контактные данные: </span></td>
-					 <li><font size="4" face="Comic Sans MS ">Телефон: +7(8482)35-27-44</font></li>
-					 <li><font size="4" face="Comic Sans MS ">Почтовый адрес: knopo4ka@gmail.com</font></li>
+					 <li><font size="4" face="Comic Sans MS ">Телефон: +7(917)123-28-81</font></li>
+					 <li><font size="4" face="Comic Sans MS ">Почтовый адрес: lubasha-tlt@yandex.ru</font></li>
 			 
 			  </ul>
 
